--- a/src/app/@theme/template/science-profile-form/career/career.component.html
+++ b/src/app/@theme/template/science-profile-form/career/career.component.html
@@ -1,4 +1,5 @@
 <ng2-smart-table [settings]="settings"
     [source]="source"
-    (deleteConfirm)="onDeleteConfirm($event)">
+    (deleteConfirm)="onDeleteConfirm($event)"
+    (editConfirm)="onEditConfirm($event)">
 </ng2-smart-table>
