--- a/src/app/@theme/styles/themes.scss
+++ b/src/app/@theme/styles/themes.scss
@@ -22,6 +22,7 @@ $nb-themes: nb-register-theme((
   slide-out-background: #f7f9fc,
   slide-out-shadow-color: 0 4px 14px 0 #8f9bb3,
   slide-out-shadow-color-rtl: 0 4px 14px 0 #8f9bb3,
+  layout-bg: url("http://ttu.edu.vn/wp-content/uploads/2017/03/bg-web2-1.jpg"),
 ), default, default);
 
 $nb-themes: nb-register-theme((
