--- a/src/app/authenticate/login/login.component.html
+++ b/src/app/authenticate/login/login.component.html
@@ -1,1 +1,43 @@
-<p>login works!</p>
+<h1 id='title' class="title text-center">
+    TTU SCIENCE DEPARTMENT
+</h1>
+<br>
+<form (ngSubmit)="onSubmit()">
+    <div class="form-group row">
+        <label for="inputEmail" class="col-sm-3 col-form-label">Email</label>
+        <div class="col-sm-9">
+            <input
+                type="email"
+                class="form-control"
+                id="inputEmail"
+                placeholder="Email"
+                [(ngModel)]="user.email"
+                name="email">
+        </div>
+    </div>
+  
+    <div class="form-group row">
+        <label for="imputPassword" class="col-sm-3 col-form-label">Password</label>
+        <div class="col-sm-9">
+            <input
+                type="password"
+                class="form-control"
+                id="imputPassword"
+                placeholder="Password"
+                [(ngModel)]="user.password"
+                name="password">
+        </div>
+    </div>
+    
+  
+    <div class="form-control-group accept-group">
+        <nb-checkbox name="rememberMe" [(ngModel)]="rememberMe">Remember me</nb-checkbox>
+        <a class="forgot-password" routerLink="../request-password">Forgot Password?</a>
+    </div>
+    <br>
+    <div class="form-group row">
+        <div class="offset-sm-3 col-sm-9">
+            <button type="submit" class="btn btn-primary">Login</button>
+        </div>
+    </div>
+</form>
