--- a/src/app/@theme/template/util/confirm/confirm.component.html
+++ b/src/app/@theme/template/util/confirm/confirm.component.html
@@ -1,6 +1,6 @@
 <nb-card>
     <nb-card-body>
-        <div style="text-align: center;">ARE YOU SURE?</div>
+    <div style="text-align: center;">{{content}}</div>
     </nb-card-body>
     <nb-card-footer>
         <button class="cancel" nbButton status="danger" (click)="cancel()">Cancel</button>
