--- a/src/app/dashboard/users/detail/detail.component.html
+++ b/src/app/dashboard/users/detail/detail.component.html
@@ -1,3 +1,2 @@
-<p>
-  detail works!
-</p>
+<ngx-science-profile-form [ScienceProfile]="scienceProfile" (voted)="onSave($event)">
+</ngx-science-profile-form>
