--- a/src/app/dashboard/users/detail/detail.component.html
+++ b/src/app/dashboard/users/detail/detail.component.html
@@ -1,2 +1,2 @@
-<ngx-science-profile-form [ScienceProfile]="scienceProfile" (voted)="onSave($event)">
+<ngx-science-profile-form [ScienceProfile]="scienceProfile" (Save)="onSave($event)">
 </ngx-science-profile-form>
