--- a/src/app/@theme/template/util/confirm/confirm.component.html
+++ b/src/app/@theme/template/util/confirm/confirm.component.html
@@ -1,9 +1,9 @@
 <nb-card>
     <nb-card-body>
-    <div style="text-align: center;">{{content}}</div>
+    <div style="text-align: center;">{{context}}</div>
     </nb-card-body>
     <nb-card-footer>
-        <button class="cancel" nbButton status="danger" (click)="cancel()">Cancel</button>
+        <button class="cancel" nbButton status="danger" (click)="cancel()">Discard</button>
         <button nbButton status="success" (click)="confirm()">Confirm</button>
     </nb-card-footer>
 </nb-card>
