--- a/src/app/dashboard/users/detail/detail.component.html
+++ b/src/app/dashboard/users/detail/detail.component.html
@@ -1,2 +1,39 @@
-<ngx-science-profile-form [ScienceProfile]="scienceProfile" (Save)="onSave($event)">
-</ngx-science-profile-form>
+<nb-card>
+    <nb-card-header>
+        <div class="row show-grid">
+            <div class="col-md-2">
+                <img
+                    src="https://dl.airtable.com/7hFbl0uvQEiF4UAIpT2e_Trường-ĐH-Tân-Tạo%C2%A0.png"
+                    alt="TTU"
+                    height="60"
+                    width="72">
+            </div>
+            <div class="col-md-8">
+                <h1 style="color: green; text-align: center;">TAN TAO UNIVERSITY JOURNAL</h1>
+            </div>
+            <div class="col-md-2">
+                <p>User ID: 2284</p>
+            </div>
+        </div>
+    </nb-card-header>
+
+    <nb-card-body>
+            <div class="row show-grid">
+                <div class="col-md-2">
+                    <button fullWidth nbButton status="primary" (click)="onEdit()" [hidden]="editing">Edit</button>
+                    <button fullWidth nbButton status="danger" (click)="onCancel()" [hidden]="!editing">Save</button>
+                </div>
+                <div class="col-md-8">
+                    <h1 style="color: blue; text-align: center;">Science Profile</h1>
+                </div>
+                <div class="col-md-2">
+                    <button fullWidth nbButton status="success" (click)="onCancel()" [hidden]="!editing">Cancel</button>
+                </div>
+            </div>
+            <div>
+                <ngx-profile>
+                </ngx-profile>
+            </div>
+    </nb-card-body>
+
+</nb-card>
