--- a/src/app/dashboard/users/detail/profile/career/career.component.html
+++ b/src/app/dashboard/users/detail/profile/career/career.component.html
@@ -1,6 +1,5 @@
+
 <ng2-smart-table [settings]="settings"
     [source]="source"
-    (create)="update()"
-    (edit)="update()"
-    (delete)="update()">
+    (userRowSelect)="onRowSelect($event)">
 </ng2-smart-table>
