Finalize profie feature

--- a/src/app/dashboard/users/detail/profile/education/education-dialog/education-dialog.component.html
+++ b/src/app/dashboard/users/detail/profile/education/education-dialog/education-dialog.component.html
@@ -16,44 +16,44 @@
         </div>
       </div>
       <div class="form-group row">
-        <label for="organization" class="label col-md-2 col-form-label">Organization</label>
+        <label for="university" class="label col-md-2 col-form-label">University</label>
         <div class="col-md-10">
           <input
                 type="text"
                 nbInput
                 fullWidth
-                id="organization"
-                placeholder="organization"
-                [(ngModel)]="data.organization"
-                name="organization"
+                id="university"
+                placeholder="university"
+                [(ngModel)]="data.university"
+                name="university"
                 [(disabled)]="disable">
         </div>
       </div>
       <div class="form-group row">
-        <label for="address" class="label col-md-2 col-form-label">Address</label>
+        <label for="major" class="label col-md-2 col-form-label">Major</label>
         <div class="col-md-10">
           <input
                 type="text"
                 nbInput
                 fullWidth
-                id="address"
-                placeholder="address"
-                [(ngModel)]="data.address"
-                name="address"
+                id="major"
+                placeholder="major"
+                [(ngModel)]="data.major"
+                name="major"
                 [(disabled)]="disable">
         </div>
       </div>
       <div class="form-group row">
-        <label for="position" class="label col-md-2 col-form-label">Position</label>
+        <label for="degree" class="label col-md-2 col-form-label">degree</label>
         <div class="col-md-10">
           <input
                 type="text"
                 nbInput
                 fullWidth
-                id="position"
-                placeholder="position"
-                [(ngModel)]="data.position"
-                name="position"
+                id="degree"
+                placeholder="degree"
+                [(ngModel)]="data.degree"
+                name="degree"
                 [(disabled)]="disable">
         </div>
       </div>
