--- a/src/app/dashboard/users/detail/profile/education/education.component.html
+++ b/src/app/dashboard/users/detail/profile/education/education.component.html
@@ -1,6 +1,13 @@
+<button
+    fullWidth
+    class="cancel"
+    nbButton
+    status="primary"
+    [hidden]="disabled"
+    (click)="onNew()">
+    Add new
+</button>
 <ng2-smart-table [settings]="settings"
     [source]="source"
-    (create)="update()"
-    (edit)="update()"
-    (delete)="update()">
+    (userRowSelect)="onRowSelect($event)">
 </ng2-smart-table>
