--- a/src/app/dashboard/users/detail/profile/experience-and-researches/experience-and-researches.component.html
+++ b/src/app/dashboard/users/detail/profile/experience-and-researches/experience-and-researches.component.html
@@ -1,3 +1,6 @@
-<p>
-  experience-and-researches works!
-</p>
+<ngx-research-interest></ngx-research-interest>
+
+<ngx-latest-researches></ngx-latest-researches>
+
+<ngx-total-researches></ngx-total-researches>
+
