--- a/src/app/dashboard/users/detail/profile/experience-and-researches/latest-researches/latest-researches-dialog/latest-researches-dialog.component.html
+++ b/src/app/dashboard/users/detail/profile/experience-and-researches/latest-researches/latest-researches-dialog/latest-researches-dialog.component.html
@@ -16,44 +16,44 @@
         </div>
       </div>
       <div class="form-group row">
-        <label for="organization" class="label col-md-2 col-form-label">Organization</label>
+        <label for="project" class="label col-md-2 col-form-label">Project</label>
         <div class="col-md-10">
           <input
                 type="text"
                 nbInput
                 fullWidth
-                id="organization"
-                placeholder="organization"
-                [(ngModel)]="data.organization"
-                name="organization"
+                id="project"
+                placeholder="project"
+                [(ngModel)]="data.project"
+                name="project"
                 [(disabled)]="disable">
         </div>
       </div>
       <div class="form-group row">
-        <label for="address" class="label col-md-2 col-form-label">Address</label>
+        <label for="role" class="label col-md-2 col-form-label">Role</label>
         <div class="col-md-10">
           <input
                 type="text"
                 nbInput
                 fullWidth
-                id="address"
-                placeholder="address"
-                [(ngModel)]="data.address"
-                name="address"
+                id="role"
+                placeholder="role"
+                [(ngModel)]="data.role"
+                name="role"
                 [(disabled)]="disable">
         </div>
       </div>
       <div class="form-group row">
-        <label for="position" class="label col-md-2 col-form-label">Position</label>
+        <label for="sponsor" class="label col-md-2 col-form-label">Sponsor</label>
         <div class="col-md-10">
           <input
                 type="text"
                 nbInput
                 fullWidth
-                id="position"
-                placeholder="position"
-                [(ngModel)]="data.position"
-                name="position"
+                id="sponsor"
+                placeholder="sponsor"
+                [(ngModel)]="data.sponsor"
+                name="sponsor"
                 [(disabled)]="disable">
         </div>
       </div>
