--- a/src/app/dashboard/users/detail/profile/foreign-languages/foreign-languages-dialog/foreign-languages-dialog.component.html
+++ b/src/app/dashboard/users/detail/profile/foreign-languages/foreign-languages-dialog/foreign-languages-dialog.component.html
@@ -2,58 +2,58 @@
   <nb-card-body>
     <form>
       <div class="form-group row">
-        <label for="time" class="label col-md-2 col-form-label">Time</label>
+        <label for="language" class="label col-md-2 col-form-label">Language</label>
         <div class="col-md-10">
           <input
                 type="text"
                 nbInput
                 fullWidth
-                id="time"
-                placeholder="time"
-                [(ngModel)]="data.time"
-                name="time"
+                id="language"
+                placeholder="language"
+                [(ngModel)]="data.language"
+                name="language"
                 [(disabled)]="disable">
         </div>
       </div>
       <div class="form-group row">
-        <label for="organization" class="label col-md-2 col-form-label">Organization</label>
+        <label for="reading" class="label col-md-2 col-form-label">Reading</label>
         <div class="col-md-10">
           <input
                 type="text"
                 nbInput
                 fullWidth
-                id="organization"
-                placeholder="organization"
-                [(ngModel)]="data.organization"
-                name="organization"
+                id="reading"
+                placeholder="reading"
+                [(ngModel)]="data.reading"
+                name="reading"
                 [(disabled)]="disable">
         </div>
       </div>
       <div class="form-group row">
-        <label for="address" class="label col-md-2 col-form-label">Address</label>
+        <label for="writing" class="label col-md-2 col-form-label">Writing</label>
         <div class="col-md-10">
           <input
                 type="text"
                 nbInput
                 fullWidth
-                id="address"
-                placeholder="address"
-                [(ngModel)]="data.address"
-                name="address"
+                id="writing"
+                placeholder="writing"
+                [(ngModel)]="data.writing"
+                name="writing"
                 [(disabled)]="disable">
         </div>
       </div>
       <div class="form-group row">
-        <label for="position" class="label col-md-2 col-form-label">Position</label>
+        <label for="speaking" class="label col-md-2 col-form-label">speaking</label>
         <div class="col-md-10">
           <input
                 type="text"
                 nbInput
                 fullWidth
-                id="position"
-                placeholder="position"
-                [(ngModel)]="data.position"
-                name="position"
+                id="speaking"
+                placeholder="speaking"
+                [(ngModel)]="data.speaking"
+                name="speaking"
                 [(disabled)]="disable">
         </div>
       </div>
