--- a/src/app/dashboard/users/detail/profile/foreign-languages/foreign-languages.component.html
+++ b/src/app/dashboard/users/detail/profile/foreign-languages/foreign-languages.component.html
@@ -1,3 +1,13 @@
-<p>
-  foreign-languages works!
-</p>
+<button
+    fullWidth
+    class="cancel"
+    nbButton
+    status="primary"
+    [hidden]="disabled"
+    (click)="onNew()">
+    Add new
+</button>
+<ng2-smart-table [settings]="settings"
+    [source]="source"
+    (userRowSelect)="onRowSelect($event)">
+</ng2-smart-table>
