--- a/src/app/dashboard/users/detail/detail.component.html
+++ b/src/app/dashboard/users/detail/detail.component.html
@@ -21,13 +21,13 @@
             <div class="row show-grid">
                 <div class="col-md-2">
                     <button fullWidth nbButton status="primary" (click)="onEdit()" [hidden]="editing">Edit</button>
-                    <button fullWidth nbButton status="danger" (click)="onSave()" [hidden]="!editing">Save</button>
+                    <button fullWidth nbButton status="success" (click)="onSave()" [hidden]="!editing">Save</button>
                 </div>
                 <div class="col-md-8">
                     <h1 style="color: blue; text-align: center;">Science Profile</h1>
                 </div>
                 <div class="col-md-2">
-                    <button fullWidth nbButton status="success" (click)="onCancel()" [hidden]="!editing">Cancel</button>
+                    <button fullWidth nbButton status="danger" (click)="onCancel()" [hidden]="!editing">Cancel</button>
                 </div>
             </div>
             <div>
